# sepuh

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.yml  select_model.sh  sepuh.sh
src/: main.rs  mod_anthropic.rs  mod_google.rs  mod_ollama.rs  mod_openai.rs  mod_openrouter.rs  mod_xai.rs  openai_compat.rs  sse.rs  utils.rs
