[package]
name = "sepuh"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sepuh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.52", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
async-openai = { version = "0.36", default-features = false, features = ["_api", "chat-completion", "rustls"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
